#   XML::FeedPP Changes

0.03 2006/02/25 (Yusuke Kawasaki)
        + first release.

#   http://www.kawa.net/works/perl/feedpp/feedpp-e.html