@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-FeedPP
-version:      0.05
+version:      0.07
 version_from: lib/XML/FeedPP.pm
 installdirs:  site
 requires:
     Test::More:                    0
-    XML::TreePP:                   0.02
+    XML::TreePP:                   0.06
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
