@@ -4,7 +4,9 @@ WriteMakefile(
     NAME                => 'XML-FeedPP',
     VERSION_FROM        => 'lib/XML/FeedPP.pm',
     PREREQ_PM           => {
-        'Test::More'    => '0',
-        'XML::TreePP'   => '0.02',
+        'Test::More'        => '0',
+        'XML::TreePP'       => '0.06',
+#       'LWP::UserAgent'    => '0',
+#       'HTTP::Lite'        => '0'
     },
 );
