@@ -1,6 +1,12 @@
 #   XML::FeedPP Changes
 
-0.03 2006/02/25 (Yusuke Kawasaki)
-        + first release.
+2006/03/09 (0.07)
+        * correct RSS/RDF/Atom file's format
+
+2006/02/27 (0.05)
+        * add set() get() methods
+
+2006/02/24 (0.03)
+        * first release
 
 #   http://www.kawa.net/works/perl/feedpp/feedpp-e.html
